--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #d88c89;
-  background-image: linear-gradient(19deg, #d88c89 0%, #b9b1d6 100%);
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -57,7 +57,9 @@ a {
 
 .profile {
   width: 108px;
+  height: 108px;
   border-radius: 100%;
+  object-fit: cover;
 
 }
 
